partially fixed casing

--- a/public/index.html
+++ b/public/index.html
@@ -43,18 +43,18 @@
         <!-- Side navigation bar -->
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-          <li class="active sidenavselect" data-target="#Overview"><a href="#">Overview</a></li>
-          <li class="sidenavselect" data-target="#MovieList"><a href="#">Movie List <span class="sr-only">(current)</span></a></li>
+          <li class="active side-nav-select" data-target="#Overview"><a href="#">Overview</a></li>
+          <li class="side-nav-select" data-target="#MovieList"><a href="#">Movie List <span class="sr-only">(current)</span></a></li>
           </ul>
         </div>
 
         <!-- Overview page container -->
-        <div class="contentdiv col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-2 main"; id="Overview">
+        <div class="content-div col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-2 main"; id="Overview">
           <h1 class="page-header">Choose a page to view</h1>
         </div>
 
         <!-- Movie List page Container -->
-        <div class="notshown contentdiv col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-2 main"; id="MovieList">
+        <div class="notshown content-div col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-2 main"; id="MovieList">
           <h1 class="page-header">Movie List</h1>
           <div class="col-md-8 col-sm-6 col-md-offset-1 col-sm-offset-1 input-group">
             <span class="input-group-addon">Add Movie</span>
