playing with edit options

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,12 @@
 <html>
   <head>
     <title>List Web App</title>
-    <!-- Bootstrap core CSS -->
     <link href="./vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap theme -->
     <link href="./vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
-    <!-- styling file -->
     <link href="./global.css" rel="stylesheet">
-    <!-- Bootstrap core JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="../public/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./vendor/font-awesome/css/font-awesome.css"></script>
   </head>
 
   <body>
@@ -38,8 +35,8 @@
 
     <!-- main page container -->
     <div class="container-fluid">
-
       <div class="row">
+
         <!-- Side navigation bar -->
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
@@ -49,18 +46,21 @@
         </div>
 
         <!-- Overview page container -->
-        <div class="content-div col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-2 main"; id="Overview">
+        <div class="content-div col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-2 main" id="Overview">
           <h1 class="page-header">Choose a page to view</h1>
         </div>
 
         <!-- Movie List page Container -->
-        <div class="notshown content-div col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-2 main"; id="MovieList">
+        <div class="notshown content-div col-sm-8 col-sm-offset-3 col-md-9 col-md-offset-2 main" id="MovieList">
           <h1 class="page-header">Movie List</h1>
           <div class="col-md-8 col-sm-6 col-md-offset-1 col-sm-offset-1 input-group">
             <span class="input-group-addon">Add Movie</span>
             <input type="text" id="movienameinput" class="form-control" placeholder="New Movie Name" aria-describedby="movienameinput">
             <span class="input-group-btn">
               <button id="submitmovie" type="button" class="btn btn-warning">+</button>
+              <button id="edit-movie" type="button" class="btn btn-info">
+                <i class="fa fa-pencil-square-o"></i>
+              </button>
             </span>
           </div>
           <div class="col-md-11 table-responsive">
