--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>List Web App</title>
     <link   href= "./vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link   href= "./vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <script src=  "./vendor/jquery/dist/jquery.min.js"></script>
-    <script src=  "./vendor/angular/angular.js"></script>
+    <script src=  "./vendor/angular/angular.min.js"></script>
     <script src=  "./vendor/angular-route/angular-route.min.js"></script>
     <script src=  "./vendor/bootstrap/dist/js/bootstrap.min.js"></script>
     <link   href= "./vendor/font-awesome/css/font-awesome.css" rel="stylesheet"></script>
@@ -15,6 +16,8 @@
     <script src=  "https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src=  "./global.js"></script>
     <script src=  "./controllers.js"></script>
+    <script src=  "./vendor/moment/moment.js"></script>
+    <script src=  "./vendor/angular-moment/angular-moment.js"></script>
   </head>
 
   <body ng-app="angularListApp">
@@ -32,9 +35,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a>Settings</a></li>
+            <li><a>Profile</a></li>
+            <li><a>Help</a></li>
           </ul>
         </div>
       </div>
@@ -49,6 +52,7 @@
           <ul class="nav nav-sidebar">
             <li ng-class="{active: $route.current.activetab == 'overview'}"><a href="#/overview">Overview</a></li>
             <li ng-class="{active: $route.current.activetab == 'movie-list'}"><a href="#/movie-list">Movie List</a></li>
+            <li ng-class="{active: $route.current.activetab == 'movie-search'}"><a href="#/movie-search">Movie Search</a></li>
           </ul>
         </div>
 
