--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>List Web App</title>
+    <title>EggPlant</title>
     <link   href= "./vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link   href= "./vendor/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
     <script src=  "./vendor/jquery/dist/jquery.min.js"></script>
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#/overview">List Web App</a>
+          <a class="navbar-brand" href="#/overview">EggPlant</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
